[package]
name = "reth-bsc-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-consensus-common.workspace = true
reth-consensus.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-types.workspace = true
reth-db.workspace = true

# eth
alloy-rlp.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true

# crypto
secp256k1.workspace = true
sha3 = "0.10.8"
blst = "0.3.11"

# misc
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
lazy_static = "1.4.0"
lru = "0.12"
bitset = "0.1.2"
thiserror = "1.0.59"

[dev-dependencies]
reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
mockall = "0.12"

[features]
bsc = []