[package]
name = "reth-node-bsc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-evm-bsc.workspace = true

[features]
bsc = [
    "reth-evm-bsc/bsc",
]